# kzh_fold

./: Cargo.toml  README.md  witness.txt
benches/: bench_accumulation.rs  bench_accumulator.rs  bench_augmented_circuit.rs  bench_bls.rs  bench_halo_infinite.rs  bench_kzg.rs  bench_kzh2.rs  bench_kzh2_augmented_circuit.rs  bench_kzh2_fold.rs  bench_kzh3.rs  bench_kzh3_fold.rs  bench_kzh4.rs  bench_nova.rs  bench_pcs.rs  bench_results.ipynb  bench_witness_commitment.rs
src/: bivariate_poly.rs  commitment.rs  constant_for_curves.rs  kzg.rs  lagrange_basis.rs  lib.rs  math.rs  pcs.rs  univariate_poly.rs  utils.rs
src/accumulation/: acc_instance_constraints.rs  acc_verifier_constraints.rs  accumulator.rs  eq_tree.rs  mod.rs  poseidon.rs  prover.rs  readme.md  verifier.rs  verifier_constraints.rs
src/accumulation_circuit/: acc_instance_circuit.rs  acc_instance_constraints.rs  acc_verifier_circuit.rs  acc_verifier_constraints.rs  instance_circuit.rs  mod.rs  prover.rs  readme.md  verifier_circuit.rs
src/augmented_circuit/: augmented_circuit.rs  mod.rs
src/gadgets/: absorb.rs  mod.rs  sparse.rs
src/gadgets/non_native/: mod.rs  non_native_affine_var.rs  readme.md  short_weierstrass.rs  util.rs
src/gadgets/r1cs/: conversion.rs  mod.rs  ova.rs  r1cs.rs  r1cs_constraints.rs  r1cs_var.rs  readme.md
src/halo_infinite/: errors.rs  hpi.rs  mod.rs  pcs.rs  private_aggregation.rs  prover.rs
src/hash/: mod.rs  pederson.rs  poseidon.rs
src/kzh/: kzh2.rs  kzh3.rs  kzh4.rs  mod.rs  zk_kzh2.rs  zk_kzh3.rs
src/kzh2_augmented_circuit/: kzh2_augmented_circuit.rs  mod.rs
src/kzh2_verifier_circuit/: instance_circuit.rs  mod.rs  prover.rs  verifier_circuit.rs
src/kzh3_augmented_circuit/: kzh3_augmented_circuit.rs  mod.rs
src/kzh3_verifier_circuit/: instance_circuit.rs  mod.rs  prover.rs  verifier_circuit.rs
src/kzh_fold/: eq_tree.rs  kzh2_fold.rs  kzh3_fold.rs  kzh_3_fold.rs  kzh_4_fold.rs  mod.rs
src/nexus_spartan/: commitments.rs  committed_relaxed_snark.rs  conversion.rs  crr1cs.rs  crr1csproof.rs  dense_mlpoly.rs  errors.rs  math.rs  mod.rs  partial_verifier_circuit.rs  product_tree.rs  r1csinstance.rs  r1csproof.rs  random.rs  sparse_mlpoly.rs  sumcheck.rs  timer.rs  transcript.rs  unipoly.rs
src/nexus_spartan/commitment_traits/: mod.rs
src/nexus_spartan/matrix_evaluation_accumulation/: mod.rs  prover.rs  verifier_circuit.rs
src/nexus_spartan/nizk/: bullet.rs  mod.rs
src/nexus_spartan/partial_verifier/: mod.rs  partial_verifier.rs  partial_verifier_var.rs
src/nexus_spartan/polycommitments/: error.rs  hyrax.rs  kzh.rs  mod.rs  transcript_utils.rs
src/nexus_spartan/polycommitments/zeromorph/: algebra.rs  data_structures.rs  mod.rs
src/nexus_spartan/sparse_mlpoly/: mod.rs  sparse_mlpoly.rs  util.rs
src/nexus_spartan/sparse_polynomial/: mod.rs  sparse_polynomial.rs  sparse_polynomial_var.rs  test.rs  uint32.rs
src/nexus_spartan/sumcheck_circuit/: mod.rs  sumcheck_circuit.rs  sumcheck_circuit_var.rs  test.rs
src/nexus_spartan/unipoly/: mod.rs  unipoly.rs  unipoly_var.rs
src/nova/: commitment.rs  mod.rs  util_test.rs
src/nova/cycle_fold/: coprocessor.rs  coprocessor_constraints.rs  mod.rs  nifs.rs  readme.md  test.rs
src/nova/folding/: mod.rs  nifs.rs
src/nova/nova/: mod.rs  prover.rs  verifier_circuit.rs  verifier_circuit_var.rs
src/pcs/: kzh2.rs  kzh4.rs  mod.rs  multilinear_pcs.rs  readme.md
src/pcs/kzh3/: kzh3.rs  mod.rs
src/polynomial/: bivariate_poly.rs  eq_poly.rs  identity.rs  lagrange_basis.rs  math.rs  mod.rs  multilinear_poly.rs  readme.md  traits.rs  univariate.rs  univariate_poly.rs
src/polynomial/bivariate_polynomial/: bivariate_poly.rs  lagrange_basis.rs  mod.rs  univariate_poly.rs
src/polynomial/eq_poly/: eq_poly.rs  eq_poly_var.rs  mod.rs
src/polynomial/multilinear_poly/: mod.rs  multilinear_poly.rs  multilinear_poly_var.rs
src/polynomial/multilinear_polynomial/: bivariate_multilinear.rs  dense_multilinear_poly.rs  eq_poly.rs  indentity.rs  math.rs  mod.rs  multilinear_poly.rs
src/polynomial/univariate/: mod.rs  univariate.rs  univariate_var.rs
src/polynomial_commitment/: bivariate_pcs.rs  mod.rs  multilinear_pcs.rs  pcs.rs  readme.md
src/signature_aggregation/: bivariate_sumcheck.rs  mod.rs  prover.rs  signature.rs  signature_aggregation.rs  verifier.rs  verifier_circuit.rs
src/signature_aggregation/augmented_circuit/: ivc.rs  mod.rs
src/signature_aggregation/verifier_circuit/: mod.rs  prover.rs  verifier_circuit.rs  verifier_circuit_var.rs
src/signature_augmented_circuit/: ivc.rs
src/spartan/: dense_mlpoly.rs  errors.rs  mod.rs  poly.rs  product_tree.rs  random.rs  sumcheck.rs  transcript.rs  unipoly.rs
src/transcript/: mod.rs  transcript.rs  transcript_var.rs
